--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/layout}">
-<th:block layout:fragment="content">
-	<body>
-		main.html 입니다.
-	</body>
+	<th:block layout:fragment="content">
+		<body>
+			main.html 입니다.
+			<button id="btn">
+				버튼
+			</button>
+		</body>
+	</th:block>
+	<th:block layout:fragment="script">
+		<script th:src="@{/js/main.js}"></script>
+	</th:block>
 </html>
