비동기 테스트

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -6,6 +6,12 @@
 			<button id="btn">
 				버튼
 			</button>
+			<button id="fetchBtn">
+				fetch버튼
+			</button>
+			<button id="xhrBtn">
+				xhr버튼
+			</button>
 		</body>
 	</th:block>
 	<th:block layout:fragment="script">
