--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -5,6 +5,11 @@
 <title>Login</title>
 </head>
 <body>
-
+	<label>아이디</label>
+	<input type="text">
+	<label>비밀번호</label>
+	<input type="text">
+	
+	<button>로그인</button>
 </body>
 </html>
