1) custom argumnet test

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -3,14 +3,11 @@
 	<th:block layout:fragment="content">
 		<body>
 			main.html 입니다.
-			<button id="btn">
+			<button id="testBtn">
 				버튼
 			</button>
 			<button id="fetchBtn">
 				fetch버튼
-			</button>
-			<button id="xhrBtn">
-				xhr버튼
 			</button>
 		</body>
 	</th:block>
